--- a/Documentation/DocumentationKerrPy.tex
+++ b/Documentation/DocumentationKerrPy.tex
@@ -674,7 +674,7 @@ linenos
 #######################
 ##training parameters##
 #######################
-nucleation_down =   1       # 0 for nucleation up
+nucleation_down =   True       # False for nucleation up
 nImages         =   9       # number of pulses in an iteration
 center_ROI      =   (511,672)  #center of the object to be identified
 adaptive_ROI    =   True    # flag for adaptive ROI
